feat: 更新比赛和策略相关逻辑，增加错误处理和请求优化，改进 Docker 启动命令

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
     networks:
       - agent-arena-network
     restart: unless-stopped
-    command: uvicorn app.main:app --host 0.0.0.0 --port 9000 --reload
+    command: ["sh", "-c", "alembic upgrade head && exec uvicorn app.main:app --host 0.0.0.0 --port 9000 --reload"]
 
   # pgAdmin (数据库管理工具)
   pgadmin:
