--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,13 +31,15 @@ services:
   redis:
     image: redis:7-alpine
     container_name: agent-arena-redis
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-redis_password_2024}
     command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-redis_password_2024}
     ports:
       - "6379:6379"
     volumes:
       - ${DOCKER_VOLUME_BASE:-./data/volumes}/agent-arena/redis:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      test: ["CMD-SHELL", "redis-cli -a \"$$REDIS_PASSWORD\" ping | grep -q PONG"]
       interval: 10s
       timeout: 3s
       retries: 5
